Fix loader popup too large

--- a/views/css/payments.css
+++ b/views/css/payments.css
@@ -267,7 +267,7 @@
   bottom: 0;
   right: 0;
 
-  width: 450px;
+  width: 400px;
   height: 250px;
 
   margin: auto;
