--- a/views/css/payments16.css
+++ b/views/css/payments16.css
@@ -251,7 +251,7 @@
   bottom: 0;
   right: 0;
 
-  width: 450px;
+  width: 400px;
   height: 250px;
 
   margin: auto;
